--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -1,6 +1,6 @@
 <html> <head> <style>body {font-family:arial; font-size:small; background:#eeeeee}</style> </head>
 <body>
-<a href=https://github.com/Lichtfarbenspiel/Softwaredesign target="_blank">GitHub Abgaben</a></br>
+<a href=https://github.com/Lichtfarbenspiel/Softwaredesign target="_blank">GitHub Repository</a></br>
 <hr>
 <a href=https://sftp.hs-furtwangen.de/~dieterle/ target="_blank"></a></br>
 <hr>
