--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -1,8 +1,15 @@
-<html> <head> <style>body {font-family:arial; font-size:small; background:#eeeeee}</style> </head>
-<body>
-<a href=https://github.com/Lichtfarbenspiel/Softwaredesign target="_blank">GitHub Repository</a></br>
-<hr>
-<a href=https://sftp.hs-furtwangen.de/~dieterle/ target="_blank"></a></br>
-<hr>
-</body>
-</html>
+<style>td {vertical-align:top; font-family:arial; font-size:small; background:#eeeeee}</style>
+<table width="100%" height="100%" border="0" cellpadding="2" cellspacing="0">
+  <tr><td width="200">
+	   <!-- dieser Block wird am Ende des Semesters wichtig sein, bitte nicht löschen
+   	    Titel<br /></br />
+	    <a href="Anforderungsliste.htm" target="_blank">Anforderungsliste (01.01.2111)</a><br />
+		<a href="link" target="_blank">Kurzkonzept (01.01.2111)</a><br />
+		<a href="link" target="_blank">Applikation.zip (01.01.2111)</a><br />
+		<a href="link" target="_blank">Applikation.swf (01.01.2111)</a><br />
+		-->		
+		<a href="https://github.com/Lichtfarbenspiel/Softwaredesign" target="_blank">Git Repository Softwaredesign</a><br />
+	</td>
+    <td>Hier ggf. Fragen, Kommentare, Kritik, offen Probleme etc. eingeben. Immer mit dem aktuellen Datum beginnen!</td>
+  </tr>
+</table>
