--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -10,6 +10,6 @@
 		-->		
 		<a href="https://github.com/Lichtfarbenspiel/Softwaredesign" target="_blank">Git Repository Softwaredesign</a><br />
 	</td>
-    <td>Hier ggf. Fragen, Kommentare, Kritik, offen Probleme etc. eingeben. Immer mit dem aktuellen Datum beginnen!</td>
+    <td>Bis jetzt keine Probleme!</td>
   </tr>
 </table>
