--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -1,5 +1,5 @@
-<style>td {vertical-align:top; font-family:arial; font-size:small; background:#eeeeee}</style>
-<table width="100%" height="100%" border="10" cellpadding="2" cellspacing="0">
+<style>td {vertical-align:top; font-family:arial; font-size:small; background:#eeeeee} a{color: rgb(194, 39, 0)}</style>
+<table width="100%" height="100%" border="0" cellpadding="2" cellspacing="0">
   <tr><td width="200">
 	   <!-- dieser Block wird am Ende des Semesters wichtig sein, bitte nicht löschen
    	    Titel<br /></br />
